--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Senior Portfolio</title>
+  <style>
+    body { font-family: Arial; margin: 40px; }
+    embed { width: 100%; height: 100vh; }
+  </style>
+</head>
+<body>
+  <h1>My Senior Portfolio</h1>
+  <embed src="Senior port-1.pdf" type="application/pdf">
+</body>
+</html>
