--- a/index.html
+++ b/index.html
@@ -1,15 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Senior Portfolio</title>
-  <style>
-    body { font-family: Arial; margin: 40px; }
-    embed { width: 100%; height: 100vh; }
-  </style>
+  <title>My Senior Portfolio</title>
+  <link rel="stylesheet" href="style.css"> <!-- Link to your CSS -->
 </head>
 <body>
-  <h1>My Senior Portfolio</h1>
-  <embed src="Senior port-1.pdf" type="application/pdf">
+  <header>
+    <h1>Welcome to My Portfolio</h1>
+    <nav>
+      <a href="#projects">Projects</a>
+      <a href="#about">About Me</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
+
+  <section id="projects">
+    <h2>My Projects</h2>
+    <!-- Add project cards or images here -->
+  </section>
+
+  <section id="about">
+    <h2>About Me</h2>
+    <p>Brief description about yourself.</p>
+  </section>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Email: example@mail.com</p>
+  </section>
+
+  <footer>
+    <p>© 2025 Your Name</p>
+  </footer>
 </body>
 </html>
