--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Senior Portfolio</title>
-  <link rel="stylesheet" href="style.css"> <!-- Link to your CSS -->
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
@@ -17,17 +18,20 @@
 
   <section id="projects">
     <h2>My Projects</h2>
-    <!-- Add project cards or images here -->
+    <!-- Add your slide images here -->
+    <img src="images/slide1.png" alt="Slide 1">
+    <img src="images/slide2.png" alt="Slide 2">
+    <!-- Add more slides as needed -->
   </section>
 
   <section id="about">
     <h2>About Me</h2>
-    <p>Brief description about yourself.</p>
+    <p>Write a short description about yourself here.</p>
   </section>
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email: example@mail.com</p>
+    <p>Email: yourname@example.com</p>
   </section>
 
   <footer>
